--- a/practica2/practica/package.json
+++ b/practica2/practica/package.json
@@ -5,10 +5,12 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
+    "build": "vite build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
+    "gh-pages": "^6.3.0",
     "typescript": "~5.8.3",
     "vite": "^6.3.5"
   },
@@ -16,4 +18,5 @@
     "@tailwindcss/vite": "^4.1.6",
     "tailwindcss": "^4.1.6"
   }
+  
 }
